forma de crecer

--- a/auxinv/Assembly-CSharp.csproj
+++ b/auxinv/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CelController.cs" />
     <Compile Include="Assets\Scripts\Clock.cs" />
+    <Compile Include="Assets\Scripts\Observer.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>D:/trabg/celu/auxinv/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
